--- a/index.html
+++ b/index.html
@@ -2,11 +2,140 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>SEDONA</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+  <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" alt="Логотип Седона." src="">
+        </a>
+        <ul class="navigation-list">
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Главная</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">О Седоне</a>
+        </li>
+        <li class="navigation-item">
+          <a class="navigation-link" href="#">Гостиницы</a>
+        </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Нравится</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Хочу сюда!</a>
+      </nav>
+    </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">SEDONA</h1>
+      <img class="logo" src="" alt="Логотип SEDONA">
+
+      <h1 class="title-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p class="title-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-description">— №1 —</p>
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="photo-image" src="" alt="Настоящий городок">
+          </li>
+          <li class="advantages-item">
+            <img class="icon-image" src="" alt="домик">
+            <h3 class="advantages-title">Жильё</h3>
+            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages-item">
+            <img class="icon-image" src="" alt="Еда">
+            <h3 class="advantages-title">Еда</h3>
+            <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages-item">
+            <img class="icon-image" src="" alt="Сувениры">
+            <h3 class="advantages-title">Сувениры</h3>
+            <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+          <li class="advantages-item">
+            <img class="photo-image" src="" alt="мост дьявола">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-description">— №2 —!</p>
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-description">— №3 —</p>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-description">— №4 —</p>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-description">— №5 —</p>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+
+          <li class="advantages-item">
+            <h3 class="advantages-title">Заинтересовались?</h3>
+            <p class="advantages-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+            </p>
+            <a class="button button-all" href="#">Посмотреть все</a>
+          </section>
+
+          <section class="newsletter">
+            <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+            <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="newsletter-email">Email</label>
+            <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
+            <button class="button newsletter-button" type="submit">
+            <span class="visually-hidden">Подписаться</span>
+            </button>
+            </form>
+            </section>
+          <section class="footer-social">
+            <ul class="footer-social-list">
+            <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">ВКонтакте</span>
+            </a>
+            </li>
+            <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy ">
+            <span class="visually-hidden">Telegram</span>
+            </a>
+            </li>
+            <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">YouTube</span>
+            </a>
+            </li>
+            </ul>
+            <footer class="page-footer">
+            <section class="footer-contacts">
+            <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+            </section>
+            </body>
+            </html>
+
+
+    </main>
 
   </body>
 </html>
