--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li class="advantages-item">
             <img class="photo-image" src="" alt="мост дьявола">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">— №2 —!</p>
+            <p class="advantages-description">— №2 —</p>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
           <li class="advantages-item">
