--- a/index.html
+++ b/index.html
@@ -2,112 +2,118 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>SEDONA</title>
+    <title>HTML Academy: Седона</title>
   </head>
-
   <body>
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-          <img class="page-header-logo" alt="Логотип Седона." src="">
-        </a>
+          <img class="page-header-logo" alt="Логотип Седона." src="images/svg/logo-sedona.svg"></a>
+        <nav class="navigattion">
         <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Главная</a>
-        </li>
+         <a class="navigation-link" href="index.html">Главная</a></li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">О Седоне</a>
-        </li>
+         <a class="navigation-link" href="#">О Седоне</a></li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Гостиницы</a>
-        </li>
-        </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Нравится</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!</a>
-      </nav>
-    </header>
-    <main class="main-index">
-      <h1 class="visually-hidden">SEDONA</h1>
-      <img class="logo" src="" alt="Логотип SEDONA">
-
-      <h1 class="title-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
-      <p class="title-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-
-      <section class="advantages">
+         <a class="navigation-link" href="catalog.html">Гостиницы</a></li>
+      </ul>
+   </nav>
+        <ul class="navigation-user">
+          <li class="navigation-item-user">
+            <a class="navigation-link-user" href="#">
+              <span class="visually-hidden">Поиск</span></a>
+  </li>
+    <li class="navigation-item-user">
+      <a class="navigation-link" href="#">
+      <span class="visually-hidden">Избранное</span></a>
+   </li>
+   <li class="navigation-item-user">
+     <a class="button navigation-button" href="#">Хочу сюда!</a>
+   </li>
+   </ul>
+ </header>
+    <asider class="main-background">
+      <figure class="main-background-block"
+      <img class="main-sedona-description" src="" alt="">
+    </figure>
+    </asider>
+    <section class="advantages">
+      <h1 class="main-header-text">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+      <p class="advantages-text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
+        <ol class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">— №1 —</p>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="photo-image" src="" alt="Настоящий городок">
-          </li>
+            <div class="advantages-imagine-block">
+            <div class="container-text">
+              <h3 class="advantages-title-white">Настоящий городок</h3>
+              <p class="advantages-numbers-white">— №1 —</p>
+              <p class="advantages-description-white">Седона — не аттракцион<br> для туристов, там течёт<br>
+          своя жизнь</p>
+            </div>
+            <div class="container-img"><img class="town" src="images/jpeg/true-city.jpg" width="800" height="384" alt="Город Седона"></div>
+                </div>
+        <ul class="advantages-list-icons">
           <li class="advantages-item">
-            <img class="icon-image" src="" alt="домик">
-            <h3 class="advantages-title">Жильё</h3>
+            <img class="hotel" src="images/svg/icon-house.svg" width="75" height="72" alt="Иконка">
+            <h4 class="advantages-title-icons">Жильё</h4>
             <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="advantages-item">
-            <img class="icon-image" src="" alt="Еда">
-            <h3 class="advantages-title">Еда</h3>
-            <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="advantages-icons">
+            <img class="burger" src="images/svg/icon-food.svg" width="74" height="70" alt="Иконка">
+            <h4 class="advantages-title-icons">Еда</h4>
+            <p class="advantages-icons-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-item">
-            <img class="icon-image" src="" alt="Сувениры">
-            <h3 class="advantages-title">Сувениры</h3>
-            <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          <li class="advantages-icons">
+            <img class="gift" src="images/svg/icon-presents.svg" width="64" height="76" alt="Иконка">
+            <h4 class="advantages-title-icons">Сувениры</h4>
+            <p class="advantages-icons-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
+        </ul>
+      </li>
           <li class="advantages-item">
-            <img class="photo-image" src="" alt="мост дьявола">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">— №2 —</p>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <div class="advantages-imagine-block">
+            <div class="container-img"><img class="bridge" src="images/jpeg/bridge-devil.jpg" width="800" height="384" alt="Мост Дьявола"></div>
+            <div class="container-text">
+              <h3 class="advantages-title-white">Там есть мост дьявола</h3>
+              <p class="advantages-numbers-white">— №2 —</p>
+              <p class="advantages-description-white">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            </div>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-block">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <p class="advantages-description">— №3 —</p>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-block">
             <h3 class="advantages-title">Красивая дорога</h3>
             <p class="advantages-description">— №4 —</p>
             <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-block">
             <h3 class="advantages-title">Мало туристов</h3>
             <p class="advantages-description">— №5 —</p>
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-
-          <li class="advantages-item">
-            <h3 class="advantages-title">Заинтересовались?</h3>
-            <p class="advantages-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
-            </p>
-            <a class="button button-all" href="#">Посмотреть все</a>
-          </section>
-
-          <section class="newsletter">
-            <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-            <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+        </ol>
+      </section>
+      <section class="booking">
+        <h2 class="visually-hidden">Форма выбора отеля</h2>
+        <p class="booking-head">Заинтересовались?</p>
+        <p class="booking-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button button-all" href="#">Поиск гостиницы в седоне</a>
+      </section>
+    <footer class="page-footer">
+     <section class="newsletter">
+      <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+      <p class="page-fotter-title-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
             <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email">Email</label>
-            <input class="field" placeholder="email@example.com" type="email" name="newsletter-email" id="newsletter-email" required>
-            <button class="button newsletter-button" type="submit">
-            <span class="visually-hidden">Подписаться</span>
-            </button>
-            </form>
-            </section>
+            <label class="visually-hidden" for="newsletter-email">Ваш e-mail</label>
+            <input class="field" placeholder="Ваш email" type="email" name="newsletter-email" id="newsletter-email" required>
+            <button class="button newsletter-button" type="submit">Подписаться</button>
+          </form>
+       </section>
           <section class="footer-social">
             <ul class="footer-social-list">
             <li class="footer-social-item">
@@ -130,12 +136,8 @@
             <section class="footer-contacts">
             <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
-            </section>
-            </body>
-            </html>
-
-
-    </main>
-
+          </section>
+         </body>
+       </main>
   </body>
 </html>
